tests/errors/it.vir
mod HalfAdder {
    incoming a : Bit async

    incoming b : Bit async


    outgoing sum : Bit async

    outgoing carry_out : Bit async


    // sum is true when one of a and b is true (but not both)
    sum := a ^^ b

    // carry is true when a and b are both true
    carry_out := a && b
}

mod FullAdder {
    incoming a : Bit async

    incoming b : Bit async

    incoming carry_in : Bit async


    outgoing sum : Bit async {
        sum := ha1.sum
    }

    outgoing carry_out : Bit async {
        it := ha0.carry_out || ha1.carry_out
    }


    mod ha0 of HalfAdder {
        it.a := a
        it.b := b
        // CHECK: Unknown component it.carry
        carry1 := it.carry
    }

    mod ha1 of HalfAdder {
        it.a := ha0.sum
        it.b := carry_in
        carry2 := it.carry
    }
}

mod Cpu {
    incoming clock : Clock
    incoming reset : Reset
}

mod UnknownSubcomponent {
    incoming clock : Clock
    incoming reset : Reset

    mod cpu of Cpu {
        it.clock := clock
        it.reset := reset

        // CHECK: Unknown component it.mem
        it.mem :=: mem.wb
    }
}
